RESOLVED FIXED288989
Nullptr crash in MediaRecorder::requestDataInternal()
https://bugs.webkit.org/show_bug.cgi?id=288989
Summary Nullptr crash in MediaRecorder::requestDataInternal()
p_choudhury
Reported 2025-03-03 12:12:07 PST
Attachments
p_choudhury
Comment 1 2025-03-03 12:25:24 PST
EWS
Comment 2 2025-03-11 13:46:48 PDT
Committed 291974@main (1d9dbbef7133): <https://commits.webkit.org/291974@main> Reviewed commits have been landed. Closing PR #41792 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.