Nullptr crash in MediaRecorder::requestDataInternal() https://bugs.webkit.org/show_bug.cgi?id=288989 rdar://144407606

Reviewed by Jean-Yves Avenard.

Added a nullptr check for buffer object. As per W3C spec, the blob can be empty if no data is gathered.
We do not have reliable test script to repro this edge case race condition.

* Source/WebCore/Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::requestDataInternal):

Canonical link: https://commits.webkit.org/291974@main